<resources>
    <string name="app_name">UngDungDocSach</string>
    <string name="login">Đăng Nhập</string>
    <string name="continue_without_login">Tiếp tục mà không cần đăng nhập</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="register_bold"><b>Đăng ký</b></string>
    <string name="register">Đăng ký</string>
    <string name="create_account">Tạo Tài Khoản</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="saving_data">Đang lưu thông tin</string>
    <string name="creating_account">Đang tạo tài khoản</string>
    <string name="logging_in">Đang đăng nhập</string>
    <string name="dashboard">Bảng Điều Khiển</string>
    <string name="add_category">Thêm Danh Mục</string>
    <string name="adding_category">Đang thêm danh mục</string>
    <string name="search">Tìm kiếm</string>
    <string name="title">Tên Sách</string>
    <string name="description">Mô Tả</string>
    <string name="category">Danh Mục</string>
    <string name="upload">Đăng Tải</string>
    <string name="uploading_pdf">Đang tải lên pdf</string>
    <string name="book_title">Tên Sách</string>
    <string name="size">Kích Thước</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="book">Sách</string>
    <string name="deleting">Đang xoá</string>
    <string name="edit_book">Sửa Thông Tin Sách</string>
    <string name="update">Cập Nhật</string>
    <string name="updating">Đang Cập Nhật</string>
</resources>