<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:id="@+id/rl_pdf"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray_dark">

            <!--Pdf view-->
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.rey.material.widget.ProgressView
                android:id="@+id/pbar_pdf"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                app:pv_circular="true"
                app:pv_autostart="true"
                app:pv_progressStyle="@style/CircularProgress"
                app:pv_progressMode="indeterminate"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/rl_pdf"
            android:layout_toStartOf="@id/btn_more"
            android:maxLines="1"
            android:text="@string/book_title" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_toEndOf="@id/rl_pdf"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="8dp"
            android:maxLines="4"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tv_category"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tv_size"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:layout_toEndOf="@id/rl_pdf"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:layout_toStartOf="@id/tv_category"
            android:layout_toEndOf="@id/tv_size"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_black"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>