<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfListAdminActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar2">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/category"
            android:layout_below="@id/tv_title"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <!--Tim kiem-->
    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:padding="10dp"
        android:hint="@string/search"
        android:textColorHint="@color/gray"
        android:drawableStart="@drawable/ic_search_gray"
        android:drawablePadding="10dp"
        android:textColor="@color/black"/>

    <!--Danh sach pdf-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_book"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edt_search"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/rec_pdf_admin"/>
</RelativeLayout>