<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfAddActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar1">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <ImageView
            android:id="@+id/img_logo_white"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo_white"
            android:text="Thêm Sách"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginTop="-25dp"/>

        <ImageView
            android:id="@+id/btn_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_attach_white" />

    </RelativeLayout>

    <!--Nhap ten sach-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext1"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/title"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Nhap mo ta-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/til_title"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext1"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/description"
            android:textColorHint="@color/gray"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Chon danh muc-->
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_description"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_edittext1"
        android:drawableStart="@drawable/ic_category_gray"
        android:drawableEnd="@drawable/ic_down_gray"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/category"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <!--Them sach-->
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button1"
        android:layout_below="@id/tv_category"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/upload"
        android:textColor="@color/white"/>

</RelativeLayout>